# vstgui-wine-test-plugin

./: CMakeLists.txt
resources/: moduleinfo.json
source/: controller.cpp  controller.h  editor.cpp  editor.h  plugincids.h  pluginentry.cpp  pluginparamids.h  processor.cpp  processor.h  version.h  waveformviews.h
